--- a/index.html
+++ b/index.html
@@ -43,56 +43,76 @@
   </nav>
   <div class="card m-5">
     <div class="card-header">
-      Quote
+      Daily Inspiration
     </div>
     <div class="card-body">
       <blockquote class="blockquote mb-0">
-        <p>A well-known quote, contained in a blockquote element.</p>
-        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+        <p>Every individual has a place to fill in the world and is important in some respect whether he chooses to be so or not.</p>
+        <footer class="blockquote-footer">Nathaniel Hawthorne <cite title="Source Title">The Scarlet Letter</cite></footer>
       </blockquote>
     </div>
   </div>
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-10 pb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. At modi, doloremque aspernatur eveniet ab exercitationem voluptate enim voluptatem, maxime distinctio odio iusto aut accusamus! Veniam, quae ullam. Perspiciatis, quaerat inventore.</div>
-      <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit numquam quam ex sed officia deserunt ab recusandae, quod ullam! Aut cupiditate impedit accusamus, non atque ab recusandae soluta earum illum!<br>Since 9 + 4 = 13 &gt; 12, this 4-column-wide div gets wrapped onto a new line as one contiguous unit.</div>
-      <div class="col-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, est. Qui nam saepe, repellat dolore quaerat commodi! Natus consectetur eius aliquid nihil autem eos illum quos. Quas porro minus laudantium.<br>Subsequent columns continue along the new line.</div>
+      <div class="col-10 pb-5">I'm Kristin and live in Homer Glen, a suburb outside of Chicago. My degree is in Journalism but I work as a marketing mangaer for a stone veneer and landscape stone wholesaler doing a bit of everything. I decided to pursue my masters degree to complement my experience in the field and stay current on new ways of doing things.</div>
+      <div class="col-4">
+        <h2>Hobbies</h2>
+        <ul class="list-group">
+          <ul class="list-group">
+            <li class="list-group-item disabled">Traveling</li>
+            <li class="list-group-item">Golfing</li>
+            <li class="list-group-item">Going to Concerts</li>
+            <li class="list-group-item">Reading</li>
+            <li class="list-group-item">Hiking</li>
+          </ul>
+      </div>
+      <div class="col-6">
+        <h2>Intrests</h2>
+        <ul class="list-group">
+          <li class="list-group-item disabled">Cras justo odio</li>
+          <li class="list-group-item">Dapibus ac facilisis in</li>
+          <li class="list-group-item">Morbi leo risus</li>
+          <li class="list-group-item">Porta ac consectetur ac</li>
+          <li class="list-group-item">Vestibulum at eros</li>
+        </ul>
+      </div>
     </div>
   </div>
+  <h2 class="header m-5">Goals</h2>
   <div class="accordion m-5" id="accordionExample">
     <div class="accordion-item">
       <h2 class="accordion-header " id="headingOne">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Accordion Item #1
+          Complete Masters at University of Florida
         </button>
       </h2>
       <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <strong>Get a MA in Digital Strategy</strong> I'll use this to round out my knowledge, network. I feel this will help as I move forward to a position as a Director of Marketing. I will also share my knowledge and mentor members of my team.
         </div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingTwo">
         <button class="accordion-button  collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Accordion Item #2
+          Travel to New Zealand
         </button>
       </h2>
       <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <strong>I'd love to see all the natural beauty New Zealand has to offer.</strong>While there I would definitely need to visit the area where The Hobbit and Lord of the Rings was filmed. But, I would also want to hike, see the animals and hae some delicous wine.
         </div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingThree">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Accordion Item #3
+          Finish Home Renovations
         </button>
       </h2>
       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <strong>First up is doing a complete bath remodel.</strong> Ok, maybe not first up. First, we need to finish off the space in the basement that is just calling for a game room, but then it's on to the bathroom.
         </div>
       </div>
     </div>
