--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
       <div class="col-6">
         <h2>Intrests</h2>
         <ul class="list-group">
-          <li class="list-group-item disabled">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Morbi leo risus</li>
-          <li class="list-group-item">Porta ac consectetur ac</li>
-          <li class="list-group-item">Vestibulum at eros</li>
+          <li class="list-group-item disabled">Photography</li>
+          <li class="list-group-item">Art</li>
+          <li class="list-group-item">Gardening</li>
+          <li class="list-group-item">Learning New Skills</li>
+          <li class="list-group-item">Cooking</li>
         </ul>
       </div>
     </div>
